...
        setAccessibilityElement(true)
        setAccessibilityIdentifier("Pattern Canvas")
        setAccessibilityRole(.group)
        setAccessibilityLabel("Pattern Canvas")
        brushCursorView.isHidden = true
        brushCursorView.setAccessibilityElement(true)
        brushCursorView.setAccessibilityIdentifier("Brush Cursor")
        brushCursorView.setAccessibilityRole(.image)
        brushCursorView.setAccessibilityLabel("Brush Cursor")
        addSubview(brushCursorView)
    }

    required init(coder: NSCoder) {
...
